<resources>
    <string name="app_name">CloudMediaPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_naviagation">NaviagationActivity</string>
    <string name="menu_group_mymusic">My Music</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_cloud">Cloud Storage</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_folder">Folder</string>
    <integer-array name="img_id_arr">
        <item>@drawable/disc</item>
        <item>@drawable/disc</item>
        <item>@drawable/disc</item>
    </integer-array>
</resources>
